2016-03-28  Charlie Zender  <zender@uci.edu>

	* Add binary file read utilities

	* Clarify append message to include metadata consequences

2016-03-24  Henry Butowsky  <henryb@hush.com>

	* Implement new notation to LHC a scalar, e.g., four[]=10;

2016-03-24  Charlie Zender  <zender@uci.edu>

	* Initialize kvm.val to NULL to handle empty values, e.g., --gaa history=""

2016-03-24  Henry Butowsky  <henryb@hush.com>

	* Attribute propagation from RHS now works with a LHC

2016-03-22  Charlie Zender  <zender@uci.edu>

	* ncremap uses append not overwrite mode

	* ncatted new nappend mode appends only to existing attributes

2016-03-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.6-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.6-alpha05 final changes';git push
	git tag -a 4.5.6-alpha05 -m 'Version 4.5.6-alpha05 new features: ncap2 pointers, terraref';git push --tags

	* Add paths for LLNL aims machines to ncremap, climo_nco.sh, climo_ann.sh

2016-03-18  Henry Butowsky  <henryb@hush.com>

	* Removed all print functions from ncoGrammar

	* Print now handled as method by print_cls() in fmc_all_cls.cc

2016-03-09  Charlie Zender  <zender@uci.edu>

	* Change CPP VERSION token to NCO_VERSION to prevent namespace conflict with other packages

2016-03-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.6-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.6-alpha04 final changes';git push
	git tag -a 4.5.6-alpha04 -m 'Version 4.5.6-alpha04 new features: ncremap handles 1D pseudo-rectangular input like OCO2';git push --tags

	* Finalize modifications to handle OCO2 and properly diagnose bad input data

	* Perform branch-cut analysis and CCW correction on pseudo-rectangular input

2016-03-07  Charlie Zender  <zender@uci.edu>

	* OCO2 bounds are given as CW not CCW so must ensure CCW before writing to output

	* Add OCO2 bounds latitude_bnds, longitude_bnds and fixes for 1D-pseudo-rectangular bounds

2016-03-06  Charlie Zender  <zender@uci.edu>
